--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,21 @@
 version: "3"
 
 services:
+  ##########################################################
+  # HADOOP SERVICES                                        #
+  ##########################################################
   namenode:
     image: bde2020/hadoop-namenode:2.0.0-hadoop2.7.4-java8
     volumes:
       - namenode:/hadoop/dfs/name
+      - ./docker-volumes/namenode/home:/home
     environment:
       - CLUSTER_NAME=test
     env_file:
       - ./hadoop-hive.env
     ports:
       - "50070:50070"
+
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     volumes:
@@ -21,15 +26,22 @@ services:
       SERVICE_PRECONDITION: "namenode:50070"
     ports:
       - "50075:50075"
+
+
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
       - ./hadoop-hive.env
+    volumes:
+      - ./docker-volumes/hive-server/home/:/home
+      - /run/media/kellermann/files/git_repo/csv2hdp/src:/home/csv2hdp
     environment:
       HIVE_CORE_CONF_javax_jdo_option_ConnectionURL: "jdbc:postgresql://hive-metastore/metastore"
       SERVICE_PRECONDITION: "hive-metastore:9083"
     ports:
       - "10000:10000"
+  
+  # Metastore services
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     env_file:
@@ -39,8 +51,10 @@ services:
       SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
     ports:
       - "9083:9083"
+  
   hive-metastore-postgresql:
     image: bde2020/hive-metastore-postgresql:2.3.0
+
   presto-coordinator:
     image: shawnzhu/prestodb:0.181
     ports:
